--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+pandas==1.0.3
 django-ninja
 django-rest-framework
-django-extensions==3.1.3
-django-htmx==1.6.0
-bokeh==2.4.2
-pandas==1.0.3
+django-extensions
+django-htmx
+bokeh
+
