--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,6 +5,6 @@ services:
       - ./app:/app
     ports:
       - "8400:8400"
-    command: python manage.py runserver 8400
+    command: python app/manage.py runserver 8400
     # Infinite loop, to keep it alive, for debugging
     # command: bash -c "while true; do echo 'sleeping...' && sleep 10; done"
